syntax = "proto3";
package noslated.data;

import "common.proto";

message RequestQueueingBroadcast {
  string name = 1;
  bool isInspect = 2;
  int32 queuedRequestCount = 4;
  string requestId = 5;
  double timestamp = 6;
}

message ContainerStatusReport {
  string functionName = 1;
  bool isInspector = 2;
  string event = 3;
  string name = 4;
}
